v1.6/_sources/index.rst.txt
.. toctree::
   :titlesonly:
   :maxdepth: 3
   :hidden:

   userguide/index
   api/index
   devel/index
   examples/index
   userguide/SUPPORT

=====
MetPy
=====

MetPy is a collection of tools in Python for reading, visualizing, and performing calculations
with weather data. MetPy supports Python >= 3.9 and is freely available under a permissive
`open source license <https://github.com/Unidata/MetPy/blob/main/LICENSE>`_.

If you're new to MetPy, check out our :doc:`Getting Started <userguide/startingguide>` guide.

.. grid:: 1 2 2 2
    :gutter: 2

    .. grid-item-card:: :octicon:`book;10em`
        :link: userguide/index
        :link-type: doc
        :text-align: center

        **User Guide**

        The user guide provides in-depth information on how
        to use MetPy, including how to get started. This is where to look for
        general conceptual descriptions on how to use parts of MetPy, like its
        support for XArray or units.

    .. grid-item-card:: :octicon:`list-unordered;10em`
        :link: api/index
        :link-type: doc
        :text-align: center

        **Reference Guide**

        The reference guide contains detailed descriptions on
        every function and class within MetPy. This is where to turn to understand
        how to use a particular feature or where to search for a specific tool

    .. grid-item-card:: :octicon:`terminal;10em`
        :link: devel/index
        :link-type: doc
        :text-align: center

        **Developer Guide**

        Want to help make MetPy better? Found something
        that's not working quite right? You can find instructions on how to
        contribute to MetPy here. You can also find detailed descriptions on
        tools useful for developing MetPy.

    .. grid-item-card:: :octicon:`graph;10em`
        :link: examples/index
        :link-type: doc
        :text-align: center

        **Example Gallery**

        Check out MetPy's gallery of examples which contains
        sample code demonstrating various parts of MetPy's functionality.

Calendar
--------
Check out the MetPy Community Calendar below. The bi-weekly MetPy Community Dev Call
is an open discussion for community input, developer highlights and updates, and
community code showcase opportunities. Stop by!
Find more information in the pinned thread in the
`Announcements section <https://github.com/Unidata/MetPy/discussions/categories/announcements>`
of MetPy GitHub Discussions.

.. raw:: html

    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&title=MetPy%20Community%20Calendar&showPrint=0&showTabs=0&showCalendars=0&showTz=1&src=Y181OTZjYzM0Y2Q3MTk2Y2FlYzIyMzc4Njc5NWM4NzMwNzg2YWVhZDZlMmRiZmZlMDM0MDMxODZmMjAzMDc1OTczQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23D50000" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>

Our up-to-date references for grants and funding can be found
`here <https://github.com/Unidata/MetPy/blob/main/CITATION.cff>`_.

.. image:: _static/NSF-Unidata_lockup_horizontal_2024.png
   :class: no-scaled-link
   :align: center
   :height: 100 px
   :alt: NSF Unidata logo
